--- a/Pear/Controllers/Chat Tab/Main Chat VC/ChatMainViewController.storyboard
+++ b/Pear/Controllers/Chat Tab/Main Chat VC/ChatMainViewController.storyboard
@@ -57,7 +57,7 @@
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8E-EA-7L2">
                                         <rect key="frame" x="0.0" y="49" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="c0a-yD-w8v"/>
                                         </constraints>
