--- a/Pear/Controllers/Friends Tab/Main VC/FriendsTabViewController.storyboard
+++ b/Pear/Controllers/Friends Tab/Main VC/FriendsTabViewController.storyboard
@@ -132,7 +132,7 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fSx-vJ-JRE" userLabel="Progress View">
                                         <rect key="frame" x="0.0" y="49" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="2sN-yP-NX2"/>
                                         </constraints>
@@ -179,6 +179,6 @@
     </scenes>
     <resources>
         <image name="friends-create-profile" width="498" height="498"/>
-        <image name="tab-icon-friends-selected" width="500" height="500"/>
+        <image name="tab-icon-friends-selected" width="512" height="512"/>
     </resources>
 </document>
