--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -225,6 +225,28 @@
                                             <outlet property="vibeImageWidthConstraint" destination="0dc-WC-SG6" id="OTu-1x-7YP"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscoveryEndCell" rowHeight="200" id="uZn-J2-oW6">
+                                        <rect key="frame" x="0.0" y="502" width="414" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uZn-J2-oW6" id="XsY-wX-8cW">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="feed-end-photo" translatesAutoresizingMaskIntoConstraints="NO" id="d27-RW-zYG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="d27-RW-zYG" secondAttribute="height" multiplier="207:100" priority="900" id="EKH-cq-r91"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="d27-RW-zYG" secondAttribute="trailing" id="Rbb-mk-uQT"/>
+                                                <constraint firstItem="d27-RW-zYG" firstAttribute="top" secondItem="XsY-wX-8cW" secondAttribute="top" id="faM-o0-RGB"/>
+                                                <constraint firstAttribute="bottom" secondItem="d27-RW-zYG" secondAttribute="bottom" id="hbp-Fg-NAs"/>
+                                                <constraint firstItem="d27-RW-zYG" firstAttribute="leading" secondItem="XsY-wX-8cW" secondAttribute="leading" id="mZb-p2-lLl"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -249,7 +271,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="discovery-icon-tree" width="63.333332061767578" height="63.333332061767578"/>
-        <image name="icon-filter" width="32" height="32"/>
+        <image name="discovery-icon-tree" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="feed-end-photo" width="3750" height="1630"/>
+        <image name="icon-filter" width="170.66667175292969" height="170.66667175292969"/>
     </resources>
 </document>
