--- a/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Enable Contact Permissions/UserContactPermissionsViewController.storyboard
@@ -16,6 +16,9 @@
         <array key="OpenSans-ExtraBold.ttf">
             <string>OpenSans-ExtraBold</string>
         </array>
+        <array key="OpenSans-Regular.ttf">
+            <string>OpenSans-Regular</string>
+        </array>
         <array key="OpenSans-SemiBold.ttf">
             <string>OpenSans-SemiBold</string>
         </array>
@@ -66,7 +69,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RaF-Ys-2WK">
-                                <rect key="frame" x="20" y="792" width="374" height="50"/>
+                                <rect key="frame" x="20" y="784" width="374" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="OGO-5N-kJc"/>
                                 </constraints>
@@ -75,17 +78,17 @@
                                     <action selector="enableContactsButtonClicked:" destination="f0l-qt-hJX" eventType="touchUpInside" id="HNN-3b-N1I"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-contact-book" translatesAutoresizingMaskIntoConstraints="NO" id="M7V-NN-5YJ">
-                                <rect key="frame" x="40" y="792" width="50" height="50"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon-contact-book" translatesAutoresizingMaskIntoConstraints="NO" id="M7V-NN-5YJ">
+                                <rect key="frame" x="30" y="787" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="M7V-NN-5YJ" secondAttribute="height" multiplier="1:1" id="fji-Ah-v80"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Pp-0I-vb7">
-                                <rect key="frame" x="20" y="300.5" width="374" height="479.5"/>
+                                <rect key="frame" x="20" y="300.5" width="374" height="471.5"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nrj-hZ-Nj2">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="479.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="471.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LatestRoastBoastTVC" rowHeight="113" id="96l-gz-M7G" customClass="LatestRoastBoastTableViewCell" customModule="Pear" customModuleProvider="target">
@@ -171,11 +174,26 @@
                                 <color key="textColor" white="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49J-Jm-N8z">
+                                <rect key="frame" x="20" y="842" width="374" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="Zn8-WM-MQb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="18"/>
+                                <state key="normal" title="Skip to Discovery">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="skipButtonClicked:" destination="f0l-qt-hJX" eventType="touchUpInside" id="jZU-rN-mQU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="p6t-xb-Gct" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" id="0iX-PN-haY"/>
                             <constraint firstItem="bCQ-GP-ba1" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="0yK-9G-eDN"/>
+                            <constraint firstItem="49J-Jm-N8z" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="20" id="4Oy-Al-HnT"/>
+                            <constraint firstItem="49J-Jm-N8z" firstAttribute="top" secondItem="RaF-Ys-2WK" secondAttribute="bottom" constant="8" id="52T-Nt-ZSN"/>
                             <constraint firstItem="bCQ-GP-ba1" firstAttribute="top" secondItem="p6t-xb-Gct" secondAttribute="bottom" id="7AZ-pT-2ep"/>
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="leading" secondItem="5Rc-dw-jwb" secondAttribute="leading" constant="30" id="7bu-2v-4j8"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="8bX-ac-HTa" secondAttribute="trailing" constant="30" id="9vo-Ia-ksH"/>
@@ -189,8 +207,9 @@
                             <constraint firstItem="M7V-NN-5YJ" firstAttribute="centerY" secondItem="RaF-Ys-2WK" secondAttribute="centerY" id="gDp-cr-o3V"/>
                             <constraint firstItem="rzM-ko-2ks" firstAttribute="top" secondItem="5Rc-dw-jwb" secondAttribute="top" constant="12" id="kzr-0E-xMa"/>
                             <constraint firstItem="8bX-ac-HTa" firstAttribute="top" secondItem="bCQ-GP-ba1" secondAttribute="bottom" constant="8" id="lLD-qH-DHp"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="49J-Jm-N8z" secondAttribute="trailing" constant="20" id="nhK-a5-JX0"/>
+                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="bottom" secondItem="49J-Jm-N8z" secondAttribute="bottom" constant="20" id="onb-e5-P76"/>
                             <constraint firstItem="p6t-xb-Gct" firstAttribute="centerX" secondItem="5Rc-dw-jwb" secondAttribute="centerX" id="pqU-25-xgg"/>
-                            <constraint firstItem="5Rc-dw-jwb" firstAttribute="bottom" secondItem="RaF-Ys-2WK" secondAttribute="bottom" constant="20" id="rJ6-8x-mn4"/>
                             <constraint firstItem="7Pp-0I-vb7" firstAttribute="top" secondItem="qYV-it-c8L" secondAttribute="bottom" constant="12" id="sFC-jW-NaO"/>
                             <constraint firstItem="M7V-NN-5YJ" firstAttribute="height" secondItem="RaF-Ys-2WK" secondAttribute="height" id="uQr-zI-2ml"/>
                             <constraint firstItem="5Rc-dw-jwb" firstAttribute="trailing" secondItem="RaF-Ys-2WK" secondAttribute="trailing" constant="20" id="vfF-XO-ml7"/>
@@ -205,6 +224,8 @@
                     <connections>
                         <outlet property="enableContactsButton" destination="RaF-Ys-2WK" id="CBE-Sp-STZ"/>
                         <outlet property="numberProfilesLabel" destination="8bX-ac-HTa" id="qQL-fe-uRr"/>
+                        <outlet property="skipButton" destination="49J-Jm-N8z" id="Nya-vR-xzb"/>
+                        <outlet property="skipButtonHeight" destination="Zn8-WM-MQb" id="etM-5x-3bW"/>
                         <outlet property="tableView" destination="nrj-hZ-Nj2" id="c5J-wX-z4U"/>
                         <outlet property="tableViewContainerView" destination="7Pp-0I-vb7" id="jQr-S3-vbr"/>
                         <outlet property="titleLabel" destination="egO-Y0-AmT" id="Wle-hg-Mwh"/>
