--- a/Pear/Controllers/New Redesign/Create User/Boast Roast Input/ProfileInputBoastRoastViewController.storyboard
+++ b/Pear/Controllers/New Redesign/Create User/Boast Roast Input/ProfileInputBoastRoastViewController.storyboard
@@ -41,7 +41,9 @@
                                             <constraint firstAttribute="height" constant="30" id="9HR-iy-XJr"/>
                                             <constraint firstAttribute="width" secondItem="lx1-e0-7ZK" secondAttribute="height" multiplier="1:1" id="W7N-Wh-hXc"/>
                                         </constraints>
-                                        <state key="normal" image="icon-cancel-button"/>
+                                        <state key="normal" image="icon-cancel-button">
+                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="cancelButtonClicked:" destination="ldV-yO-okM" eventType="touchUpInside" id="I1h-fB-Lyk"/>
                                         </connections>
@@ -194,6 +196,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon-cancel-button" width="96" height="96"/>
+        <image name="icon-cancel-button" width="224" height="224"/>
     </resources>
 </document>
